--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="box1">
+     <div class="box1">
         <div>
             <nav>
                 <a href="index.html">
@@ -16,7 +16,7 @@
                     <li><button>Quiénes somos</button></li>
                     <li><button>Foro</button></li>
                     <li><button>Registrarse</button></li>
-                    <li><input><button>Buscar</button> </li>
+                    <li><input type="text" placeholder="Buscar"><button>Buscar</button> </li>
                 </ul>
             </nav>
         </div>
@@ -32,11 +32,10 @@
             </div>
             <img src="afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
         </div>
-    <div>
+    <div class="box3">
             <div class="objetivo">
                 <h2>Nuestro objetivo</h2>
-                <p> El objetivo al crear este foco de salud mental enfocado en la prevención del suicidio es promover el bienestar emocional y la salud mental de la población mediante estrategias integrales de prevención, educación y apoyo. Esto incluye aumentar la conciencia sobre la importancia de la salud mental y los signos de alerta del suicidio, facilitar la detección temprana de personas en riesgo, ofrecer acceso a servicios de acompañamiento psicológico y redes de contención emocional, reducir el estigma asociado a buscar ayuda y fortalecer la resiliencia de las personas enseñando habilidades de afrontamiento y manejo del estrés, con el fin último de reducir los factores de riesgo y contribuir a la disminución de las tasas de suicidio.
-</p>
+                <p>El objetivo de este foco de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
             </div>
     </div>
     </div>
