--- a/index.html
+++ b/index.html
@@ -33,10 +33,28 @@
             <img src="afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
         </div>
     <div class="box3">
+        <img src="acompanamiento.png" alt="acompañamiento" class="acompañamiento">
             <div class="objetivo">
                 <h2>Nuestro objetivo</h2>
-                <p>El objetivo de este foco de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
+                <p>En mente libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
             </div>
+    </div>
+    <div class="box4">
+        <h3>¿Qué encontrarás en nuestro foro?</h3>
+        <div class="imgs">
+            <div class="foro-apoyo">
+                <img src="foro.png" alt="foro-apoyo" class="img-foro">
+                <p>Foro de apoyo emocional</p>
+            </div>
+            <div class="chat">
+                <img src="chat.png" alt="chat-especialistas" class="chat-apoyo">
+                <p>Chat con especialistas</p>
+            </div>
+            <div class="contactos">
+                <img src="contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
+                <p>Contactos de emergencia</p>
+            </div>
+        </div>
     </div>
     </div>
     </body>
