--- a/index.html
+++ b/index.html
@@ -44,18 +44,35 @@
         <div class="imgs">
             <div class="foro-apoyo">
                 <img src="foro.png" alt="foro-apoyo" class="img-foro">
-                <p>Foro de apoyo emocional</p>
+                <button><p>Foro de apoyo emocional</p></button>
             </div>
             <div class="chat">
                 <img src="chat.png" alt="chat-especialistas" class="chat-apoyo">
-                <p>Chat con especialistas</p>
+                <button><p>Chat con especialistas</p></button>
             </div>
             <div class="contactos">
                 <img src="contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
-                <p>Contactos de emergencia</p>
+                <button><p>Contactos de emergencia</p></button>
             </div>
         </div>
     </div>
+    <div class="box5">
+        <h1>Tu participación es clave </h1>
+        <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti.  Juntos, podemos construir un espacio de esperanza y sanación.</p>
+        <div class="btns-box5">
+            <button class="foro1">Unirse al foro</button>
+            <button class="contacto1">Contactarse con un especialista</button>
+            <button class="apoyo1">Aprende a apoyar a otros</button>
+        </div>
+    </div>
+    <footer>
+        <p> &copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+        <div class="footer-links">
+        <a href="politicas-privacidad.html">Políticas de privacidad</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="quienes-somos.html">Quienes somos</a>
+        </div>
+    </footer>
     </div>
     </body>
 </html>
