--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8">
   <title>Bienvenido a Mente Libre</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
      <div class="box1">
         <div>
             <nav>
                 <a href="index.html">
-                    <img src="logo.png" alt="Mente Libre" class="logo">
+                    <img src="/img/logo.png" alt="Mente Libre" class="logo">
                 </a>
                 <ul>
                     <li><button>Quiénes somos</button></li>
-                    <li><button>Foro</button></li>
+                    <li><button><a href="foro.html">Foro</a></button></li>
                     <li><button>Registrarse</button></li>
                     <li><input type="text" placeholder="Buscar"><button>Buscar</button> </li>
                 </ul>
@@ -30,10 +30,10 @@
                     <button class="btn5">Explorar la comunidad</button>
                 </div>
             </div>
-            <img src="afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
+            <img src="/img/afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
         </div>
     <div class="box3">
-        <img src="acompanamiento.png" alt="acompañamiento" class="acompañamiento">
+        <img src="/img/acompanamiento.png" alt="acompañamiento" class="acompañamiento">
             <div class="objetivo">
                 <h2>Nuestro objetivo</h2>
                 <p>En mente libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
@@ -43,15 +43,15 @@
         <h3>¿Qué encontrarás en nuestro foro?</h3>
         <div class="imgs">
             <div class="foro-apoyo">
-                <img src="foro.png" alt="foro-apoyo" class="img-foro">
-                <button><p>Foro de apoyo emocional</p></button>
+                <img src="/img/foro.png" alt="foro-apoyo" class="img-foro">
+                <button><a>Foro de apoyo emocional</a></button>
             </div>
             <div class="chat">
-                <img src="chat.png" alt="chat-especialistas" class="chat-apoyo">
+                <img src="/img/chat.png" alt="chat-especialistas" class="chat-apoyo">
                 <button><p>Chat con especialistas</p></button>
             </div>
             <div class="contactos">
-                <img src="contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
+                <img src="/img/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
                 <button><p>Contactos de emergencia</p></button>
             </div>
         </div>
@@ -68,7 +68,7 @@
     <footer>
         <p> &copy; 2025 Mente Libre. Todos los derechos reservados.</p>
         <div class="footer-links">
-        <a href="politicas-privacidad.html">Políticas de privacidad</a>
+        <a href="/politicas-privacidad.html">Políticas de privacidad</a>
         <a href="contacto.html">Contacto</a>
         <a href="quienes-somos.html">Quienes somos</a>
         </div>
