--- a/foro.html
+++ b/foro.html
@@ -21,11 +21,9 @@
             </div>    
             <div class="text">
                 <h2>Anonimous User</h2>
-                <h3>sustantivo</h3>
-                <p>Plural: Golden Retrievers</p>
-                <p>Una raza de perro amistosa, inteligente y devota, conocida por su pelaje dorado t habilidad de recuperar objetos sin danarlos</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam recusandae, minus natus aliquam laboriosam dolores architecto tempore nemo! Molestiae, enim! Quae, assumenda accusantium unde sit beatae debitis culpa magni deleniti hic, possimus eveniet harum vero nihil quas quaerat in odio similique dolores officia ipsa fugiat. Et consectetur rem quam ipsam.</p>
                 <button class="reputacion"> Dar Reconocimiento</button>
-            </div>
+            </div>    
         </div>
         <div class="destacados">
             <h3>Usuarios Destacados</h3>
