registro y login +- css

--- a/html/login.html
+++ b/html/login.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
   <title>Accede a tu cuenta</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./../css/style3.css">
     </head>
     <body>
+        <div class="contenedor">
         <h1>Bienvenid@ a Mente Libre</h1>
         <h2>Accede a tu cuenta</h2>
         <p>Nombre de usuario o correo</p>
@@ -13,5 +14,6 @@
         <p>Contraseña</p>
         <input type="text" placeholder="Ingrese su contraseña">
         <button>Ingresar</button>
+        </div>
     </body>
 </html>
