--- a/html/registro.html
+++ b/html/registro.html
@@ -3,19 +3,26 @@
     <head>
         <meta charset="UTF-8">
   <title>Registro</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./../css/style2.css">
     </head>
     <body>
         <div class="contenedor">
             <div class="box1">
                 <h1>Registrate</h1>
-                <input type="text" placeholder="Nombre">
-                <input type="text" placeholder="Apellido">
-                <input type="text" placeholder="Correo">
-                <input type="text" placeholder="Contraseña">
-                <input type="text" placeholder="Repita su contraseña">
-                <input type="text" placeholder="Nombre de usuario">
+                <p>Nombre</p>
+                <input type="text" placeholder="Ingresa tu nombre.">
+                <p>Apellido</p>
+                <input type="text" placeholder="Ingresa tu apellido.">
+                <p>Correo</p>
+                <input type="text" placeholder="tu.correo@example.com">
+                <p>Nombre de usuario</p>
+                <input type="text" placeholder="Elije tu nombre de usuario">
+                <p>Contraseña</p>
+                <input type="text" placeholder="Ingresa una contraseña segura">
+                <p>Confirma Contraseña</p>
+                <input type="text" placeholder="Vuelve a escribir tu contraseña">
                 <button>Registrarse</button>
+                <p>Al registrarte aceptas nuestras políticas de privacidad y términos y condiciones.</p>
                 <h3>¿Ya tienes una cuenta? </h3>
                 <a href="login.html">Ingresa aquí.</a>
             </div>
