--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
   <title>Bienvenido a Mente Libre</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./../css/style.css">
     </head>
     <body>
      <div class="box1">
         <div>
             <nav>
                 <a href="index.html">
-                    <img src="/imagenes/logo.png" alt="Mente Libre" class="logo">
+                    <img src="./../imagenes/logo.png" alt="Mente Libre" class="logo">
                 </a>
                 <ul>
                     <li><button>Quiénes somos</button></li>
@@ -30,10 +30,10 @@
                     <button class="btn5">Explorar la comunidad</button>
                 </div>
             </div>
-            <img src="/imagenes/afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
+            <img src="./../imagenes/afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
         </div>
     <div class="box3">
-        <img src="/imagenes/acompanamiento.png" alt="acompañamiento" class="acompañamiento">
+        <img src="./../imagenes/acompanamiento.png" alt="acompañamiento" class="acompañamiento">
             <div class="objetivo">
                 <h2>Nuestro objetivo</h2>
                 <p>En mente libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
@@ -43,15 +43,15 @@
         <h3>¿Qué encontrarás en nuestro foro?</h3>
         <div class="imgs">
             <div class="foro-apoyo">
-                <img src="/imagenes/foro.png" alt="foro-apoyo" class="img-foro">
+                <img src="./../imagenes/foro.png" alt="foro-apoyo" class="img-foro">
                 <button><p>Foro de apoyo emocional</p></button>
             </div>
             <div class="chat">
-                <img src="/imagenes/chat.png" alt="chat-especialistas" class="chat-apoyo">
+                <img src="./../imagenes/chat.png" alt="chat-especialistas" class="chat-apoyo">
                 <button><p>Chat con especialistas</p></button>
             </div>
             <div class="contactos">
-                <img src="/imagenes/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
+                <img src="./../imagenes/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
                 <button><p>Contactos de emergencia</p></button>
             </div>
         </div>
