id y comienzo de "mi perfil" revisar id

--- a/html/registro.html
+++ b/html/registro.html
@@ -10,9 +10,9 @@
             <div class="box1">
                 <h1>Registrate</h1>
                 <p>Nombre</p>
-                <input type="text" placeholder="Ingresa tu nombre.">
+                <input type="text" id="nombre" placeholder="Ingresa tu nombre.">
                 <p>Apellido</p>
-                <input type="text" placeholder="Ingresa tu apellido.">
+                <input type="text" id="apellido" placeholder="Ingresa tu apellido.">
                 <p>Correo</p>
                 <input type="text" placeholder="tu.correo@example.com">
                 <p>Nombre de usuario</p>
