edicion de "miperfil" con get REVISAR, se actualizó los id en registro y login + required en ambos

--- a/html/login.html
+++ b/html/login.html
@@ -7,13 +7,15 @@
     </head>
     <body>
         <div class="contenedor">
-        <h1>Bienvenid@ a Mente Libre</h1>
-        <h2>Accede a tu cuenta</h2>
-        <p>Nombre de usuario o correo</p>
-        <input type="text" placeholder="Ingrese nombre de usuario o correo">
-        <p>Contraseña</p>
-        <input type="text" placeholder="Ingrese su contraseña">
-        <button>Ingresar</button>
+            <h1>Bienvenid@ a Mente Libre</h1>
+            <h2>Accede a tu cuenta</h2>
+                <form action="login" method="POST">
+                <p>Nombre de usuario o correo</p>
+                <input type="text" placeholder="Ingrese nombre de usuario o correo" required>
+                <p>Contraseña</p>
+                <input type="text" placeholder="Ingrese su contraseña" required>
+                <button>Ingresar</button>
         </div>
+    </form>
     </body>
 </html>
