actualizados los id de login

--- a/html/login.html
+++ b/html/login.html
@@ -11,9 +11,9 @@
             <h2>Accede a tu cuenta</h2>
                 <form action="login" method="POST">
                 <p>Nombre de usuario o correo</p>
-                <input type="text" placeholder="Ingrese nombre de usuario o correo" required>
+                <input type="text" id="userName" placeholder="Ingrese nombre de usuario o correo" required>
                 <p>Contraseña</p>
-                <input type="text" placeholder="Ingrese su contraseña" required>
+                <input type="text" id="password" placeholder="Ingrese su contraseña" required>
                 <button>Ingresar</button>
         </div>
     </form>
