--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
             <h2>Accede a tu cuenta</h2>
                 <form action="login" method="POST">
                 <p>Nombre de usuario o correo</p>
-                <input type="text" id="userName" placeholder="Ingrese nombre de usuario o correo" required>
+                <input type="text" id="identifier" placeholder="Ingrese nombre de usuario o correo" required>
                 <p>Contraseña</p>
                 <input type="text" id="password" placeholder="Ingrese su contraseña" required>
                 <button>Ingresar</button>
