--- a/html/index.html
+++ b/html/index.html
@@ -1,78 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-  <title>Bienvenido a Mente Libre</title>
-  <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-    <div class="box1">
-        <div>
-            <nav>
-                <a href="index.html">
-                    <img src="/img/logo.png" alt="Mente Libre" class="logo">
-                </a>
-                <ul>
-                    <li><button>Quiénes somos</button></li>
-                    <li><button><a href="foro.html">Foro</a></button></li>
-                    <li><button>Registrarse</button></li>
-                    <li><input type="text" placeholder="Buscar"><button>Buscar</button> </li>
-                </ul>
-            </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenido a Mente Libre</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <nav>
+        <div class="logoNav">
+            <a href="index.html">
+                <img src="img/logo.png" alt="Mente Libre" class="logo">
+            </a>
+            <h1>Mente Libre</h1>
         </div>
-        <div class="box2">
-            <div class="text1">
-                <h1>Mente Libre </h1>
+        <ul>
+            <li><a href="quienes-somos.html">Quiénes somos</a></li>
+            <li><a href="foro.html">Foro</a></li>
+            <li><a href="registro.html">Registrarse</a></li>
+            <li><a href="login.html">Iniciar sesión</a></li>
+        </ul>
+    </nav>
+
+    <div class="contenedor-principal">
+        <section class="hero-section">
+            <div class="hero-text">
+                <h1>Mente Libre</h1>
                 <h2>Una pausa para respirar, un espacio para vivir.</h2>
-                <h3>No estás solo.  Aquí encontrarás recursos y una comunidad donde podrás cuidar tu salud mental. </h3>
+                <h3>No estás solo. Aquí encontrarás recursos y una comunidad donde podrás cuidar tu salud mental.</h3>
                 <div class="btns">
-                    <button class="btn4">Busca ayuda ahora</button>
-                    <button class="btn5">Explorar la comunidad</button>
+                    <button class="btn-primary" onclick="location.href='contacto.html'">Busca ayuda ahora</button>
+                    <button class="btn-secondary" onclick="location.href='foro.html'">Explorar la comunidad</button>
                 </div>
             </div>
-            <img src="/img/afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
-        </div>
-    <div class="box3">
-        <img src="/img/acompanamiento.png" alt="acompañamiento" class="acompañamiento">
-            <div class="objetivo">
+            <div class="hero-image">
+                <img src="img/afiche-apoyo.png" alt="Apoyo emocional">
+            </div>
+        </section>
+
+        <section class="objetivo-section">
+            <img src="img/acompanamiento.png" alt="Acompañamiento" style="max-width: 400px;">
+            <div class="objetivo-box">
                 <h2>Nuestro objetivo</h2>
-                <p>En mente libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Busca aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretende reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
+                <p>En Mente Libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Buscamos aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretendemos reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
             </div>
+        </section>
+
+        <section class="servicios-section">
+            <h3>¿Qué encontrarás en nuestro foro?</h3>
+            <div class="servicios-grid">
+                <div class="servicio-card">
+                    <img src="img/foro.png" alt="Foro de apoyo">
+                    <h4>Foro de apoyo emocional</h4>
+                    <p>Comparte experiencias y recibe apoyo de la comunidad</p>
+                    <button onclick="location.href='foro.html'">Acceder</button>
+                </div>
+                <div class="servicio-card">
+                    <img src="img/chat.png" alt="Chat">
+                    <h4>Chat con especialistas</h4>
+                    <p>Habla con profesionales de la salud mental</p>
+                    <button onclick="location.href='contacto.html'">Contactar</button>
+                </div>
+                <div class="servicio-card">
+                    <img src="img/contacto-emergencia.png" alt="Emergencia">
+                    <h4>Contactos de emergencia</h4>
+                    <p>Números y recursos para situaciones críticas</p>
+                    <button onclick="location.href='contacto.html'">Ver contactos</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta-section">
+            <h1>Tu participación es clave</h1>
+            <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti. Juntos, podemos construir un espacio de esperanza y sanación.</p>
+            <div class="cta-buttons">
+                <button onclick="location.href='foro.html'">Unirse al foro</button>
+                <button onclick="location.href='contacto.html'">Contactarse con un especialista</button>
+                <button onclick="location.href='quienes-somos.html'">Aprende a apoyar a otros</button>
+            </div>
+        </section>
     </div>
-    <div class="box4">
-        <h3>¿Qué encontrarás en nuestro foro?</h3>
-        <div class="imgs">
-            <div class="foro-apoyo">
-                <img src="/img/foro.png" alt="foro-apoyo" class="img-foro">
-                <button><a>Foro de apoyo emocional</a></button>
-            </div>
-            <div class="chat">
-                <img src="/img/chat.png" alt="chat-especialistas" class="chat-apoyo">
-                <button><p>Chat con especialistas</p></button>
-            </div>
-            <div class="contactos">
-                <img src="/img/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
-                <button><p>Contactos de emergencia</p></button>
-            </div>
-        </div>
-    </div>
-    <div class="box5">
-        <h1>Tu participación es clave </h1>
-        <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti.  Juntos, podemos construir un espacio de esperanza y sanación.</p>
-        <div class="btns-box5">
-            <button class="foro1">Unirse al foro</button>
-            <button class="contacto1">Contactarse con un especialista</button>
-            <button class="apoyo1">Aprende a apoyar a otros</button>
-        </div>
-    </div>
+
     <footer>
-        <p> &copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
         <div class="footer-links">
-        <a href="/politicas-privacidad.html">Políticas de privacidad</a>
-        <a href="contacto.html">Contacto</a>
-        <a href="quienes-somos.html">Quienes somos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="quienes-somos.html">Quiénes somos</a>
         </div>
     </footer>
-    </div>
-    </body>
+</body>
 </html>
