--- a/html/login.html
+++ b/html/login.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-  <title>Accede a tu cuenta</title>
-  <link rel="stylesheet" href="./../css/style3.css">
-    </head>
-    <body>
-        <div class="contenedor">
-            <h1>Bienvenid@ a Mente Libre</h1>
-            <h2>Accede a tu cuenta</h2>
-                <form action="login" method="POST">
-                <p>Nombre de usuario o correo</p>
-                <input type="text" id="identifier" placeholder="Ingrese nombre de usuario o correo" required>
-                <p>Contraseña</p>
-                <input type="text" id="password" placeholder="Ingrese su contraseña" required>
-                <button>Ingresar</button>
-        </div>
-    </form>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accede a tu cuenta - Mente Libre</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        🧠 Mente Libre
+    </header>
+
+    <div class="contenedor-auth">
+        <h1>Bienvenido a Mente Libre</h1>
+        <p>Accede a tu cuenta</p>
+
+        <div id="error-message" class="error-message"></div>
+
+        <form id="loginForm" class="formulario-auth" onsubmit="return handleLogin(event)">
+            <div class="grupo">
+                <label for="identifier">Nombre de usuario o correo</label>
+                <input type="text" id="identifier" name="identifier" placeholder="Ingrese nombre de usuario o correo" required>
+            </div>
+
+            <div class="grupo">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" required>
+            </div>
+
+            <button type="submit" class="btn-submit">Ingresar</button>
+        </form>
+
+        <p style="margin-top: 20px; text-align: center;">
+            ¿No tienes una cuenta? <a href="registro.html" style="color: #3c4fff; font-weight: bold;">Regístrate aquí</a>
+        </p>
+    </div>
+
+    <script src="js/auth.js"></script>
+</body>
 </html>
