--- a/html/registro.html
+++ b/html/registro.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-  <title>Registro</title>
-  <link rel="stylesheet" href="./../css/style2.css">
-    </head>
-    <body>
-        <div class="contenedor">
-            <div class="box1">
-                <h1>Registrate</h1>
-                <form action="registro" method="POST">
-                <p>Nombre</p>
-                <input type="text" id="nombre" placeholder="Ingresa tu nombre." required>
-                <p>Apellido</p>
-                <input type="text" id="apellido" placeholder="Ingresa tu apellido." required>
-                <p>Correo</p>
-                <input type="text" id="email" placeholder="tu.correo@example.com" required>
-                <p>Nombre de usuario</p>
-                <input type="text" id="userName" placeholder="Elije tu nombre de usuario" required>
-                <p>Contraseña</p>
-                <input type="text" id="password" placeholder="Ingresa una contraseña segura" required>
-                <p>Confirma Contraseña</p>
-                <input type="text"id="passwordConfirm" placeholder="Vuelve a escribir tu contraseña" required>
-                <button>Registrarse</button>
-                <p>Al registrarte aceptas nuestras políticas de privacidad y términos y condiciones.</p>
-                <h3>¿Ya tienes una cuenta? </h3> <a href="login.html">Ingresa aquí.</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registro - Mente Libre</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        🧠 Mente Libre
+    </header>
+
+    <div class="contenedor-auth">
+        <h1>Regístrate</h1>
+        <p>Únete a nuestra comunidad de apoyo</p>
+
+        <div id="error-message" class="error-message"></div>
+        <div id="success-message" class="success-message"></div>
+
+        <form id="registroForm" class="formulario-auth" onsubmit="return handleRegistro(event)">
+            <div class="grupo">
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
             </div>
+
+            <div class="grupo">
+                <label for="apellido">Apellido</label>
+                <input type="text" id="apellido" name="apellido" placeholder="Ingresa tu apellido" required>
+            </div>
+
+            <div class="grupo">
+                <label for="email">Correo electrónico</label>
+                <input type="email" id="email" name="email" placeholder="tu.correo@example.com" required>
+            </div>
+
+            <div class="grupo">
+                <label for="userName">Nombre de usuario</label>
+                <input type="text" id="userName" name="userName" placeholder="Elige tu nombre de usuario" required minlength="4">
+            </div>
+
+            <div class="grupo">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" placeholder="Ingresa una contraseña segura" required minlength="6">
+            </div>
+
+            <div class="grupo">
+                <label for="passwordConfirm">Confirma contraseña</label>
+                <input type="password" id="passwordConfirm" name="passwordConfirm" placeholder="Vuelve a escribir tu contraseña" required>
+            </div>
+
+            <button type="submit" class="btn-submit">Registrarse</button>
         </form>
-        </div>
-    </body>
+
+        <p style="margin-top: 20px; text-align: center; font-size: 0.85rem; color: #666;">
+            Al registrarte aceptas nuestras políticas de privacidad y términos y condiciones.
+        </p>
+
+        <p style="margin-top: 15px; text-align: center;">
+            ¿Ya tienes una cuenta? <a href="login.html" style="color: #3c4fff; font-weight: bold;">Ingresa aquí</a>
+        </p>
+    </div>
+
+    <script src="js/auth.js"></script>
+</body>
 </html>
