--- a/html/perfil.html
+++ b/html/perfil.html
@@ -9,20 +9,21 @@
 <body>
     <header>
         🧠 Mente Libre
-    </header>
+        </header>
 
     <section class="perfil-usuario">
         <img src="https://via.placeholder.com/150" alt="Foto de usuario" id="userAvatar">
-        <h2 id="userName">Usuario</h2>
-        <p id="userEmail">correo@ejemplo.com</p>
-        <p>Estado actual: <strong id="userStatus">Tranquilo</strong></p>
+        <h2 id="userName">Cargando...</h2>
+        <p id="userEmail">Cargando...</p>
+        <p>Título: <strong id="userKarmaTitle">Cargando...</strong></p>
+        <p>Reputación: <strong id="userReputacion">Cargando...</strong></p>
 
-        <div class="estadisticas">
-            <div>
+        <div class="estadisticas" style="margin-top: 15px;">
+            <div style="display: none;">
                 <h3 id="userSessions">0</h3>
                 <span>Sesiones</span>
             </div>
-            <div>
+            <div style="display: none;">
                 <h3 id="userMood">-</h3>
                 <span>Ánimo promedio</span>
             </div>
@@ -30,7 +31,7 @@
 
         <div class="botones-perfil">
             <button class="btn-primary" onclick="editarPerfil()">Editar Perfil</button>
-            <button class="btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
+            <button class="btn-secondary" onclick="handleCerrarSesion()">Cerrar Sesión</button>
         </div>
 
         <div style="margin-top: 30px;">
@@ -38,6 +39,7 @@
         </div>
     </section>
 
+    <script src="js/auth.js"></script>
     <script src="js/perfil.js"></script>
 </body>
 </html>
