--- a/html/perfil.html
+++ b/html/perfil.html
@@ -31,7 +31,7 @@
 
         <div class="botones-perfil">
             <button class="btn-primary" onclick="editarPerfil()">Editar Perfil</button>
-            <button class="btn-secondary" onclick="handleCerrarSesion()">Cerrar Sesión</button>
+            <button class="btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
         </div>
 
         <div style="margin-top: 30px;">
