se actualizan las rutas

--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a Mente Libre</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <nav>
         <div class="logoNav">
             <a href="index.html">
-                <img src="img/logo.png" alt="Mente Libre" class="logo">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo">
             </a>
             <h1>Mente Libre</h1>
         </div>
@@ -35,12 +35,12 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="img/afiche-apoyo.png" alt="Apoyo emocional">
+                <img src="../imagenes/afiche-apoyo.png" alt="Apoyo emocional">
             </div>
         </section>
 
         <section class="objetivo-section">
-            <img src="img/acompanamiento.png" alt="Acompañamiento" style="max-width: 400px;">
+            <img src="../imagenes/acompanamiento.png" alt="Acompañamiento" style="max-width: 400px;">
             <div class="objetivo-box">
                 <h2>Nuestro objetivo</h2>
                 <p>En Mente Libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Buscamos aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretendemos reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
@@ -51,19 +51,19 @@
             <h3>¿Qué encontrarás en nuestro foro?</h3>
             <div class="servicios-grid">
                 <div class="servicio-card">
-                    <img src="img/foro.png" alt="Foro de apoyo">
+                    <img src="../imagenes/foro.png" alt="Foro de apoyo">
                     <h4>Foro de apoyo emocional</h4>
                     <p>Comparte experiencias y recibe apoyo de la comunidad</p>
                     <button onclick="location.href='foro.html'">Acceder</button>
                 </div>
                 <div class="servicio-card">
-                    <img src="img/chat.png" alt="Chat">
+                    <img src="../imagenes/chat.png" alt="Chat">
                     <h4>Chat con especialistas</h4>
                     <p>Habla con profesionales de la salud mental</p>
                     <button onclick="location.href='contacto.html'">Contactar</button>
                 </div>
                 <div class="servicio-card">
-                    <img src="img/contacto-emergencia.png" alt="Emergencia">
+                    <img src="../imagenes/contacto-emergencia.png" alt="Emergencia">
                     <h4>Contactos de emergencia</h4>
                     <p>Números y recursos para situaciones críticas</p>
                     <button onclick="location.href='contacto.html'">Ver contactos</button>
