--- a/html/foro.html
+++ b/html/foro.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foro - Mente Libre</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <nav>
         <div class="logoNav">
             <a href="index.html">
-                <img src="img/logo.png" class="logo" alt="Logo">
+                <img src="../imagenes/logo.png" class="logo" alt="Logo">
             </a>
             <h1>Mente Libre</h1>
         </div>
