--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mente Libre - Quiénes Somos</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <img src="img/logo.png" style="height: 50px; width: auto;"> Mente Libre
+        <img src="../imagenes/logo.png" style="height: 50px; width: auto;"> Mente Libre
     </header>
 
     <main class="contenedor-quienes">
