--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
              <a href="foro.html">Foro</a>
              <a href="perfil.html" id="perfilLinkNav" style="display: none;">Perfil</a>
              <a href="registro.html" id="registroLinkNav">Registrarse</a>
-             <button id="authButtonNav" onclick="handleAuthNav()">Iniciar sesión</button>
+             <button id="authButtonNav" onclick="handleAuthNav()" href="/html/login.html">Iniciar sesión</button>
         </div>
     </nav>
 
