--- a/html/registro.html
+++ b/html/registro.html
@@ -18,7 +18,7 @@
         <div id="error-message" class="error-message"></div>
         <div id="success-message" class="success-message"></div>
 
-        <form id="registroForm" class="formulario-auth" onsubmit="return handleRegistro(event)">
+        <form id="registerForm" class="formulario-auth" onsubmit="return handleRegistro(event)">
             <div class="grupo">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
