arreglos de css

--- a/html/foro.html
+++ b/html/foro.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foro - Mente Libre</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Foro</title>
+    <link href="/css/foro.css" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <div class="logoNav">
-            <a href="index.html">
-                <img src="img/logo.png" class="logo" alt="Logo">
+        <header class="logoNav">
+            <a href="/html/index.html">
+                <img src="../imagenes/logo (2).png" class="logo" alt="Logo">
             </a>
-            <h1>Mente Libre</h1>
-        </div>
-        <input type="search" placeholder="🔍 Buscar" style="max-width: 400px;">
-        <div style="display: flex; gap: 15px; align-items: center; flex-wrap: wrap;">
-            <a href="index.html">Inicio</a>
-            <a href="perfil.html">Perfil</a>
-            <button id="authButton" onclick="handleAuth()">Iniciar sesión</button>
+                <h1>  Mente Libre </h1>
+            
+        </header>
+        <input type="text" placeholder="&#x1F50D;Buscar">
+        <div>
+            <a href="/html/CrearPost.html">Crear Post</a>
+            <a href="/html/MisPost.html">Mis Post</a>
+            <a href="/html/perfil.html">Perfil</a>
+            <a href="/html/login.html"><button id="init">iniciar sesion</button></a>
+            <a href="/html/login.html"></a><button id="register"> Registrarse</button></a>
         </div>
     </nav>
 
