--- a/html/index.html
+++ b/html/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Mente Libre</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <nav>
-        <div class="logoNav">
-            <a href="index.html">
-                <img src="img/logo.png" alt="Mente Libre" class="logo">
-            </a>
-            <h1>Mente Libre</h1>
+    <head>
+        <meta charset="UTF-8">
+  <title>Bienvenido a Mente Libre</title>
+  <link rel="stylesheet" href="/css/style.css">
+    </head>
+    <body>
+    <div class="box1">
+        <div>
+            <nav>
+                <a href="/html/index.html">
+                    <img src="/imagenes/logo.png" alt="Mente Libre" class="logo">
+                </a>
+                <ul>
+                    <li><button>Quiénes somos</button></li>
+                    <li><button><a href="/html/foro.html">Foro</a></button></li>
+                    <li><button>Registrarse</button></li>
+                    <li><input type="text" placeholder="Buscar"><button>Buscar</button> </li>
+                </ul>
+            </nav>
         </div>
         <ul>
             <li><a href="quienes-somos.html">Quiénes somos</a></li>
@@ -33,14 +39,11 @@
                     <button class="btn-secondary" onclick="location.href='foro.html'">Explorar la comunidad</button>
                 </div>
             </div>
-            <div class="hero-image">
-                <img src="img/afiche-apoyo.png" alt="Apoyo emocional">
-            </div>
-        </section>
-
-        <section class="objetivo-section">
-            <img src="img/acompanamiento.png" alt="Acompañamiento" style="max-width: 400px;">
-            <div class="objetivo-box">
+            <img src="/imagenes/afiche-apoyo.png" alt="afiche apoyo" class="afiche-apoyo">
+        </div>
+    <div class="box3">
+        <img src="/imagenes/acompanamiento.png" alt="acompañamiento" class="acompañamiento">
+            <div class="objetivo">
                 <h2>Nuestro objetivo</h2>
                 <p>En Mente Libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Buscamos aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretendemos reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
             </div>
@@ -80,12 +83,38 @@
             </div>
         </section>
     </div>
-
+    <div class="box4">
+        <h3>¿Qué encontrarás en nuestro foro?</h3>
+        <div class="imgs">
+            <div class="foro-apoyo">
+                <img src="/imagenes/foro.png" alt="foro-apoyo" class="img-foro">
+                <button><a>Foro de apoyo emocional</a></button>
+            </div>
+            <div class="chat">
+                <img src="/imagenes/chat.png" alt="chat-especialistas" class="chat-apoyo">
+                <button><p>Chat con especialistas</p></button>
+            </div>
+            <div class="contactos">
+                <img src="/imagenes/contacto-emergencia.png" alt="contactos-emergencia" class="contactos-emergencia">
+                <button><p>Contactos de emergencia</p></button>
+            </div>
+        </div>
+    </div>
+    <div class="box5">
+        <h1>Tu participación es clave </h1>
+        <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti.  Juntos, podemos construir un espacio de esperanza y sanación.</p>
+        <div class="btns-box5">
+            <a href="/html/foro.html"><button class="foro1">Unirse al foro</button></a>
+            <button class="contacto1">Contactarse con un especialista</button>
+            <button class="apoyo1">Aprende a apoyar a otros</button>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
         <div class="footer-links">
-            <a href="contacto.html">Contacto</a>
-            <a href="quienes-somos.html">Quiénes somos</a>
+        <a href="/politicas-privacidad.html">Políticas de privacidad</a>
+        <a href="/html/contacto.html">Contacto</a>
+        <a href="/html/quienes-somos.html">Quienes somos</a>
         </div>
     </footer>
 </body>
