--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" style="height: 50px; width: auto;"> Mente Libre
+    <img src="/imagenes/logo.png"> Mente Libre
     </header>
 
     <main class="contenedor-quienes">
