--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
 
         <div id="error-message" class="error-message"></div>
 
-        <form id="loginForm" class="formulario-auth" onsubmit="return handleLogin(event)">
+        <form id="loginForm" class="formulario-auth">
             <div class="grupo">
                 <label for="identifier">Nombre de usuario o correo</label>
                 <input type="text" id="identifier" name="identifier" placeholder="Ingrese nombre de usuario o correo" required>
@@ -36,6 +36,6 @@
         </p>
     </div>
 
-    <script src="js/auth.js"></script>
+    <script src="../js/auth.js"></script>
 </body>
 </html>
