--- a/html/registro.html
+++ b/html/registro.html
@@ -61,6 +61,6 @@
         </p>
     </div>
 
-    <script src="../js/register.js"></script>
+    <script src="../js/auth.js"></script>
 </body>
 </html>
