se elimina y reemplaza el hardcodeo para dejar de tener páginas estáticas.

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -13,19 +13,19 @@
 
     <section class="perfil-usuario">
         <img src="https://via.placeholder.com/150" alt="Foto de usuario" id="userAvatar">
-        <h2 id="userName">Cargando...</h2>
-        <p id="userEmail">Cargando...</p>
-        <p>Título: <strong id="userKarmaTitle">Cargando...</strong></p>
-        <p>Reputación: <strong id="userReputacion">Cargando...</strong></p>
+        <h2 id="userName"></h2>
+        <p id="userEmail"></p>
+        <p>Título: <strong id="userKarmaTitle"></strong></p>
+        <p>Reputación: <strong id="userReputacion"></strong></p>
 
         <div class="estadisticas" style="margin-top: 15px;">
-            <div style="display: none;">
-                <h3 id="userSessions">0</h3>
-                <span>Sesiones</span>
+            <div>
+                <h3 id="userSessions">--</h3>
+                <span>Sesiones (Próximamente)</span>
             </div>
-            <div style="display: none;">
-                <h3 id="userMood">-</h3>
-                <span>Ánimo promedio</span>
+            <div>
+                <h3 id="userMood">--</h3>
+                <span>Ánimo (Próximamente)</span>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
         </div>
     </section>
 
-    <script src="js/auth.js"></script>
-    <script src="js/perfil.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/perfil.js"></script>
 </body>
 </html>
