--- a/html/foro.html
+++ b/html/foro.html
@@ -50,25 +50,7 @@
 
         <aside class="destacados">
             <h2>Usuarios Destacados</h2>
-            <ul>
-                <li>
-                    <div style="display: flex; align-items: center; gap: 10px;">
-                        <span style="font-size: 2rem;">👤</span>
-                        <div>
-                            <strong>Usuario 1</strong>
-                            <p style="font-size: 0.85rem; color: #666; margin: 0;">120 reconocimientos</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div style="display: flex; align-items: center; gap: 10px;">
-                        <span style="font-size: 2rem;">👤</span>
-                        <div>
-                            <strong>Usuario 2</strong>
-                            <p style="font-size: 0.85rem; color: #666; margin: 0;">95 reconocimientos</p>
-                        </div>
-                    </div>
-                </li>
+            <ul id="topUsersList">
             </ul>
         </aside>
     </div>
@@ -127,9 +109,9 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/comentarios.js"></script>
-    <script src="js/reportes.js"></script>
-    <script src="js/foro.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/comentarios.js"></script>
+    <script src="../js/reportes.js"></script>
+    <script src="../js/foro.js"></script>
 </body>
 </html>
