--- a/html/perfil.html
+++ b/html/perfil.html
@@ -6,6 +6,21 @@
     <title>Mente Libre - Perfil de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        #userAvatar {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border: 4px solid #fff;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        #edit-avatar-preview {
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body class="bg-light d-flex flex-column">
     <header class="navbar navbar-dark bg-dark-custom shadow-sm">
@@ -23,10 +38,10 @@
                 <div class="card shadow-sm border-0 text-center">
                     <div class="card-body p-4 p-lg-5">
                         <img src="https://via.placeholder.com/150" alt="Foto de usuario" id="userAvatar" class="rounded-circle mb-3">
-                        <h2 id="userName" class="text-primary h3"></h2>
-                        <p id="userEmail" class="text-muted"></p>
-                        <p>Título: <strong id="userKarmaTitle" class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill"></strong></p>
-                        <p>Reputación: <strong id="userReputacion" class="text-primary"></strong></p>
+                        <h2 id="userName" class="text-primary h3">Cargando...</h2>
+                        <p id="userEmail" class="text-muted">Cargando...</p>
+                        <p>Título: <strong id="userKarmaTitle" class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill">...</strong></p>
+                        <p>Reputación: <strong id="userReputacion" class="text-primary">...</strong></p>
 
                         <div class="d-flex justify-content-around my-4">
                             <div>
@@ -40,7 +55,7 @@
                         </div>
 
                         <div class="d-flex gap-2 justify-content-center">
-                            <button class="btn btn-primary" onclick="editarPerfil()">Editar Perfil</button>
+                            <button class="btn btn-primary" onclick="abrirModalEditarPerfil()">Editar Perfil</button>
                             <button class="btn btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
                         </div>
                     </div>
@@ -52,6 +67,52 @@
         </div>
     </main>
 
+    <div class="modal fade" id="modal-editar-perfil" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Editar Perfil</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="error-message-perfil" class="alert alert-danger" style="display: none;"></div>
+                    <form id="form-editar-perfil" onsubmit="return handleGuardarPerfil(event)">
+                        <div class="row">
+                            <div class="col-md-4 text-center">
+                                <img src="https://via.placeholder.com/100" id="edit-avatar-preview" class="img-thumbnail rounded-circle mb-2" alt="Avatar Preview">
+                                <button type="button" class="btn btn-sm btn-secondary w-100" onclick="handleGenerarAvatar()">Nuevo Gato-Avatar 🐱</button>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="mb-3">
+                                    <label for="edit-nombre" class="form-label">Nombre:</label>
+                                    <input type="text" id="edit-nombre" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-apellido" class="form-label">Apellido:</label>
+                                    <input type="text" id="edit-apellido" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-email" class="form-label">Correo Electrónico:</label>
+                                    <input type="email" id="edit-email" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="select-titulo" class="form-label">Título Visible:</label>
+                                    <select id="select-titulo" class="form-select">
+                                        <option>Cargando títulos...</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-end mt-4">
+                            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <footer class="bg-dark-custom text-white p-4 mt-auto">
         <div class="container d-flex justify-content-between align-items-center flex-wrap">
             <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
