--- a/html/perfil.html
+++ b/html/perfil.html
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col-md-4 text-center">
                                 <img src="https://via.placeholder.com/100" id="edit-avatar-preview" class="img-thumbnail rounded-circle mb-2" alt="Avatar Preview">
-                                <button type="button" class="btn btn-sm btn-secondary w-100" onclick="handleGenerarAvatar()">Nuevo Gato-Avatar 🐱</button>
+                                <button type="button" class="btn btn-sm btn-secondary w-100" id="btn-new-avatar" onclick="handleGenerarAvatar()">Nuevo Gato-Avatar 🐱</button>
                             </div>
                             <div class="col-md-8">
                                 <div class="mb-3">
