ahora se puede editar el nombre de usuario en el perfil

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -96,6 +96,11 @@
                                     <input type="email" id="edit-email" class="form-control" required>
                                 </div>
                                 <div class="mb-3">
+                                    <label for="edit-username" class="form-label">Nombre de Usuario:</label>
+                                    <input type="text" id="edit-username" class="form-control" required minlength="4">
+                                    <div class="form-text small">Este es el nombre que se mostrará en el foro (mín. 4 caracteres).</div>
+                                </div>
+                                <div class="mb-3">
                                     <label for="select-titulo" class="form-label">Título Visible:</label>
                                     <select id="select-titulo" class="form-select">
                                         <option>Cargando títulos...</option>
